# notification-service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  justfile  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci-build-docker.yml  ci-build-helm.yml  ci-publish-docker.yml  ci-publish-helm.yml  container-master.yml  container-pr.yml  generate-chart-readme.yml  helm-build-and-test-operator.yml  helm-publish-operator.yml  merge.yaml  merge.yml  pr.yaml  release.yaml  release.yml
charts/notification-service/: Chart.yaml  README.md  values-staging.yaml  values.yaml
charts/notification-service/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  rolebinding.yaml  secret.yaml  serviceaccount.yaml
deploy/charts/: Chart.yaml  README.md  values.yaml
deploy/charts/templates/: deployment.yaml  role.yaml  secret.yaml
src/: alertmanager.routes.config.ts  app.ts  common.routes.config.ts  config.rs  element-notification.service.ts  formatter.rs  main.rs  message_store.rs  models.rs  output.rs  processing.rs  routes.rs
src/alertmanager/: child-alert.class.ts  parent-alert.class.ts
test/: KubeContainerWaiting-01.json  KubePodCrashLooping-01.json  KubePodCrashLooping-02.json  README.md  alert-notification.json  alertmanager-notification.json  incident-example.json
