[package]
name = "notification-service"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "notification-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# rustls-tls avoids an OpenSSL dependency — required for static musl builds on Alpine.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
